<resources>
    <string name="app_name">Know Your Government</string>
    <string name="user_location">User Location</string>
    <string name="about">About</string>
    <string name="location_lookup">Location Lookup</string>
    <string name="office_title">Office Title</string>
    <string name="official_name">Official Name</string>
    <string name="democratic_republican_party">(Democratic/Republican Party)</string>
    <string name="address_label">Address:</string>
    <string name="sample_address">1234 Sample Address</string>
    <string name="phone_label">Phone:</string>
    <string name="sample_phone">(123)456-7890</string>
    <string name="website_label">Website:</string>
    <string name="sample_website">www.website.com</string>
    <string name="fit_center">Fit Center</string>
    <string name="email_label">Email:</string>
    <string name="sample_email">email@email.com</string>
    <string name="file_name">saved.json</string>
    <string name="encoding">UTF-8</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="powered_by">Powered By</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="copyright">Copyright 2020, Olivia Chisman</string>
    <string name="api_title"><u>Google Civic\nInformation Api</u></string>
</resources>