<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBakcground"
                android:text="@string/user_location"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/office_title"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/official_name"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/democratic_republican_party"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/officialPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/missing" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/addressLabel"
                    android:layout_width="81dp"
                    android:layout_height="match_parent"
                    android:text="@string/address_label"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_address" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/phoneLabel"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:text="@string/phone_label" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_phone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/Website:"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:text="@string/website_label" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_website" />
            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/twitter" />

                <ImageView
                    android:id="@+id/youtube"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/youtube" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>